<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/backbtn"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:adjustViewBounds="true"
            android:src="@drawable/back"
            android:contentDescription="TODO" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <EditText
                android:id="@+id/username"
                android:layout_width="290sp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/edittextbackground"
                android:drawableStart="@drawable/userico"
                android:drawablePadding="10sp"
                android:hint="@string/user"
                android:inputType="text"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="290sp"
                android:layout_height="wrap_content"
                android:layout_below="@id/username"
                android:layout_marginTop="20sp"
                android:textSize="26sp"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="10sp"
                android:hint="@string/pass"
                android:background="@drawable/edittextbackground"
                android:autofillHints="" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="270sp"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80sp"
                android:background="@color/amarillo"
                android:typeface="sans"
                android:text="@string/login"
                android:textSize="26sp"
                android:textColor="@color/azul"/>

        </RelativeLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>